Update CMakeLists.txt for building examples

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -34,9 +34,7 @@ project(tritondevelopertoolsserver LANGUAGES C CXX)
 option(TRITON_ENABLE_GPU "Enable GPU support in backend utilities" ON)
 option(TRITON_ENABLE_STATS "Include statistics collections in backend utilities" ON)
 option(TRITON_BUILD_TEST "Include unit test for the Server Wrapper" ON)
-# [FIXME] doesn't have example yet
-# option(TRITON_ENABLE_EXAMPLES "Include examples in build" ON)
-option(TRITON_ENABLE_EXAMPLES "Include examples in build" OFF)
+option(TRITON_ENABLE_EXAMPLES "Include examples in build" ON)
 
 set(TRITON_COMMON_REPO_TAG "main" CACHE STRING "Tag for triton-inference-server/common repo")
 set(TRITON_CORE_REPO_TAG "main" CACHE STRING "Tag for triton-inference-server/core repo")
