--- a/backend/cpp/CMakeLists.txt
+++ b/backend/cpp/CMakeLists.txt
@@ -28,8 +28,8 @@ include(rapids-find)
 # - User Options  ------------------------------------------------------------
 
 option(TRITON_ENABLE_GPU "Enable GPU support in Triton" ON)
-option(BUILD_TESTS "Build rapids_triton unit-tests" ON)
-option(BUILD_EXAMPLE "Build rapids_identity example backend" OFF)
+option(BUILD_TESTS "Build backend dev tools unit-tests" ON)
+option(BUILD_EXAMPLE "Build dev tools identity example backend" OFF)
 option(CUDA_ENABLE_KERNELINFO "Enable kernel resource usage info" OFF)
 option(CUDA_ENABLE_LINEINFO "Enable the -lineinfo option for nvcc (useful for cuda-memcheck / profiler)" OFF)
 option(CUDA_STATIC_RUNTIME "Statically link the CUDA runtime" OFF)
@@ -41,27 +41,27 @@ set(TRITON_COMMON_REPO_TAG "r21.12" CACHE STRING "Tag for triton-inference-serve
 set(TRITON_CORE_REPO_TAG "r21.12" CACHE STRING "Tag for triton-inference-server/core repo")
 set(TRITON_BACKEND_REPO_TAG "r21.12" CACHE STRING "Tag for triton-inference-server/backend repo")
 
-message(VERBOSE "RAPIDS_TRITON: Build RAPIDS_TRITON unit-tests: ${BUILD_TESTS}")
-message(VERBOSE "RAPIDS_TRITON: Enable detection of conda environment for dependencies: ${DETECT_CONDA_ENV}")
-message(VERBOSE "RAPIDS_TRITON: Disable depreaction warnings " ${DISABLE_DEPRECATION_WARNINGS})
-message(VERBOSE "RAPIDS_TRITON: Enable kernel resource usage info: ${CUDA_ENABLE_KERNELINFO}")
-message(VERBOSE "RAPIDS_TRITON: Enable lineinfo in nvcc: ${CUDA_ENABLE_LINEINFO}")
-message(VERBOSE "RAPIDS_TRITON: Enable nvtx markers: ${NVTX}")
-message(VERBOSE "RAPIDS_TRITON: Statically link the CUDA runtime: ${CUDA_STATIC_RUNTIME}")
-message(VERBOSE "RAPIDS_TRITON: Enable GPU support: ${TRITON_ENABLE_GPU}")
-message(VERBOSE "RAPIDS_TRITON: Enable statistics collection in Triton: ${TRITON_ENABLE_STATS}")
-message(VERBOSE "RAPIDS_TRITON: Triton common repo tag: ${TRITON_COMMON_REPO_TAG}")
-message(VERBOSE "RAPIDS_TRITON: Triton core repo tag: ${TRITON_CORE_REPO_TAG}")
-message(VERBOSE "RAPIDS_TRITON: Triton backend repo tag: ${TRITON_BACKEND_REPO_TAG}")
+message(VERBOSE "DEV_TOOLS: Build DEV_TOOLS unit-tests: ${BUILD_TESTS}")
+message(VERBOSE "DEV_TOOLS: Enable detection of conda environment for dependencies: ${DETECT_CONDA_ENV}")
+message(VERBOSE "DEV_TOOLS: Disable depreaction warnings " ${DISABLE_DEPRECATION_WARNINGS})
+message(VERBOSE "DEV_TOOLS: Enable kernel resource usage info: ${CUDA_ENABLE_KERNELINFO}")
+message(VERBOSE "DEV_TOOLS: Enable lineinfo in nvcc: ${CUDA_ENABLE_LINEINFO}")
+message(VERBOSE "DEV_TOOLS: Enable nvtx markers: ${NVTX}")
+message(VERBOSE "DEV_TOOLS: Statically link the CUDA runtime: ${CUDA_STATIC_RUNTIME}")
+message(VERBOSE "DEV_TOOLS: Enable GPU support: ${TRITON_ENABLE_GPU}")
+message(VERBOSE "DEV_TOOLS: Enable statistics collection in Triton: ${TRITON_ENABLE_STATS}")
+message(VERBOSE "DEV_TOOLS: Triton common repo tag: ${TRITON_COMMON_REPO_TAG}")
+message(VERBOSE "DEV_TOOLS: Triton core repo tag: ${TRITON_CORE_REPO_TAG}")
+message(VERBOSE "DEV_TOOLS: Triton backend repo tag: ${TRITON_BACKEND_REPO_TAG}")
 
 ##############################################################################
 # - Project Initialization ---------------------------------------------------
 
 if(TRITON_ENABLE_GPU)
-  rapids_cuda_init_architectures(RAPIDS_TRITON)
-  project(RAPIDS_TRITON VERSION 22.02.00 LANGUAGES CXX CUDA)
+  rapids_cuda_init_architectures(DEV_TOOLS)
+  project(DEV_TOOLS VERSION 22.02.00 LANGUAGES CXX CUDA)
 else()
-  project(RAPIDS_TRITON VERSION 22.02.00 LANGUAGES CXX)
+  project(DEV_TOOLS VERSION 22.02.00 LANGUAGES CXX)
 endif()
 
 
@@ -77,7 +77,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Set RMM logging level
 set(RMM_LOGGING_LEVEL "INFO" CACHE STRING "Choose the logging level.")
 set_property(CACHE RMM_LOGGING_LEVEL PROPERTY STRINGS "TRACE" "DEBUG" "INFO" "WARN" "ERROR" "CRITICAL" "OFF")
-message(VERBOSE "RAPIDS_TRITON: RMM_LOGGING_LEVEL = '${RMM_LOGGING_LEVEL}'.")
+message(VERBOSE "DEV_TOOLS: RMM_LOGGING_LEVEL = '${RMM_LOGGING_LEVEL}'.")
 
 ##############################################################################
 # - Conda environment detection ----------------------------------------------
@@ -85,7 +85,7 @@ message(VERBOSE "RAPIDS_TRITON: RMM_LOGGING_LEVEL = '${RMM_LOGGING_LEVEL}'.")
 if(DETECT_CONDA_ENV)
   rapids_cmake_support_conda_env( conda_env MODIFY_PREFIX_PATH )
   if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT AND DEFINED ENV{CONDA_PREFIX})
-      message(STATUS "RAPIDS_TRITON: No CMAKE_INSTALL_PREFIX argument detected, setting to: $ENV{CONDA_PREFIX}")
+      message(STATUS "DEV_TOOLS: No CMAKE_INSTALL_PREFIX argument detected, setting to: $ENV{CONDA_PREFIX}")
       set(CMAKE_INSTALL_PREFIX "$ENV{CONDA_PREFIX}")
   endif()
 endif()
@@ -102,8 +102,8 @@ if(TRITON_ENABLE_GPU)
   # * enable the CMake CUDA language
   # * set other CUDA compilation flags
   rapids_find_package(CUDAToolkit REQUIRED
-      BUILD_EXPORT_SET rapids_triton-exports
-      INSTALL_EXPORT_SET rapids_triton-exports
+      BUILD_EXPORT_SET triton_backend-exports
+      INSTALL_EXPORT_SET triton_backend-exports
       )
   include(cmake/modules/ConfigureCUDA.cmake)
 endif()
@@ -129,12 +129,12 @@ endif()
 ##############################################################################
 # - install targets-----------------------------------------------------------
 
-add_library(rapids_triton INTERFACE)
-add_library(rapids_triton::rapids_triton ALIAS rapids_triton)
-target_include_directories(rapids_triton INTERFACE "$<BUILD_INTERFACE:${RAPIDS_TRITON_SOURCE_DIR}/include>"
+add_library(triton_backend INTERFACE)
+add_library(triton_backend::triton_backend ALIAS triton_backend)
+target_include_directories(triton_backend INTERFACE "$<BUILD_INTERFACE:${DEV_TOOLS_SOURCE_DIR}/include>"
                                           "$<INSTALL_INTERFACE:include>")
 
-target_link_libraries(rapids_triton
+target_link_libraries(triton_backend
 INTERFACE
   $<$<BOOL:${TRITON_ENABLE_GPU}>:rmm::rmm>
   $<$<BOOL:${TRITON_ENABLE_GPU}>:raft::raft>
@@ -144,58 +144,58 @@ INTERFACE
 
 if (TRITON_ENABLE_GPU)
   target_compile_features(
-    rapids_triton INTERFACE cxx_std_17
+    triton_backend INTERFACE cxx_std_17
     $<BUILD_INTERFACE:cuda_std_17>
   )
 else()
   target_compile_features(
-    rapids_triton INTERFACE cxx_std_17
+    triton_backend INTERFACE cxx_std_17
   )
 endif()
 
 rapids_cmake_install_lib_dir(lib_dir)
-install(TARGETS rapids_triton
+install(TARGETS triton_backend
         DESTINATION ${lib_dir}
-        EXPORT rapids_triton-exports
+        EXPORT triton_backend-exports
         )
 
 include(GNUInstallDirs)
-install(DIRECTORY include/rapids_triton/
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rapids_triton
+install(DIRECTORY include/triton_backend/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/triton_backend
         )
 
-# Temporary install of rapids_triton.hpp while the file is removed
-install(FILES include/rapids_triton.hpp
-	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rapids_triton
+# Temporary install of triton_backend.hpp while the file is removed
+install(FILES include/triton_backend.hpp
+	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/triton_backend
 	)
 
 ##############################################################################
 # - install export -----------------------------------------------------------
 set(doc_string
 [=[
-Provide targets for RAPIDS_TRITON.
+Provide targets for Triton Backend Developer Tools.
 
-RAPIDS_TRITON is a header-only library designed to make it easier and faster
-to integrate RAPIDS algorithms as Triton backends.
+Triton Backend Developer Tools is a header-only library designed to make it
+easier and faster to create custom C++ Triton backends.
 
 ]=])
 
- rapids_export(INSTALL rapids_triton
-    EXPORT_SET rapids_triton-exports
-    GLOBAL_TARGETS rapids_triton # since we can't hook into EXPORT SETS
-    NAMESPACE rapids_triton::
+ rapids_export(INSTALL triton_backend
+    EXPORT_SET triton_backend-exports
+    GLOBAL_TARGETS triton_backend # since we can't hook into EXPORT SETS
+    NAMESPACE triton_backend::
     DOCUMENTATION doc_string
     )
 
 ##############################################################################
 # - build export -------------------------------------------------------------
 
-rapids_export(BUILD rapids_triton
-    EXPORT_SET rapids_triton-exports
-    GLOBAL_TARGETS rapids_triton # since we can't hook into EXPORT SETS
+rapids_export(BUILD triton_backend
+    EXPORT_SET triton_backend-exports
+    GLOBAL_TARGETS triton_backend # since we can't hook into EXPORT SETS
     LANGUAGES CUDA
     DOCUMENTATION doc_string
-    NAMESPACE rapids_triton::
+    NAMESPACE triton_backend::
     )
 
 ##############################################################################
