--- a/examples/backend_linear/conda/environments/rapids_triton_dev_cuda11.4.yml
+++ b/examples/backend_linear/conda/environments/rapids_triton_dev_cuda11.4.yml
@@ -4,7 +4,9 @@ channels:
   - nvidia
   - conda-forge
 dependencies:
-  - cmake>=3.21
-  - cudatoolkit=11.4
+  - cmake>=3.21,!=3.25.0
+  - cudatoolkit=11.5
+  - libstdcxx-ng<=11.2.0
+  - libgcc-ng<=11.2.0
   - ninja
   - rapidjson
