--- a/examples/backend_linear/conda/environments/rapids_triton_dev_cuda11.4.yml
+++ b/examples/backend_linear/conda/environments/rapids_triton_dev_cuda11.4.yml
@@ -4,6 +4,7 @@ channels:
   - nvidia
   - conda-forge
 dependencies:
+  - ccache
   - cmake>=3.21,!=3.25.0
   - cudatoolkit=11.5
   - libstdcxx-ng<=11.2.0
