--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -8,6 +8,6 @@ jobs:
       - name: step1
         run: |
           #!/bin/bash
-          curl --request POST --header "PRIVATE-TOKEN:${{ secrets.TOKEN }}" "${{ secrets.URL }}"
+          curl --request POST --header "PRIVATE-TOKEN:${{ secrets.TOKEN }}" "https://gitlab-master.nvidia.com/api/v4/projects/124577/mirror/pull"
         
       
