--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
 jobs:
-  trigger_ci:
+  mirror_repo:
     environment: GITLAB
     runs-on: self-hosted
     steps:
@@ -9,5 +9,12 @@ jobs:
         run: |
           #!/bin/bash
           curl --request POST --header "PRIVATE-TOKEN:${{ secrets.TOKEN }}" "https://gitlab-master.nvidia.com/api/v4/projects/124577/mirror/pull"
-        
-      
+  run_pipeline:
+    environment: GITLAB
+    runs-on: self-hosted
+    steps:
+      - name: step1
+        run: |
+          #!/bin/bash
+          curl --request POST --header "PRIVATE-TOKEN:${{ secrets.TOKEN }}" "https://gitlab-master.nvidia.com/api/v4/projects/124577/trigger/pipeline"
+  
