--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -16,5 +16,5 @@ jobs:
       - name: step1
         run: |
           #!/bin/bash
-          curl --request POST --fail -F token=${{ secrets.PIPELINE_TOKEN }} -F ref=${{ github.ref_name }} "${{ secrets.PIPELINE_URL }}"
+          curl --request POST --fail -F token=${{ secrets.PIPELINE_TOKEN }} -F ref=${GITHUB_HEAD_REF} "${{ secrets.PIPELINE_URL }}"
   
