--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,4 +4,4 @@
 # Learn about CODEOWNERS file format:
 #  https://help.github.com/en/articles/about-code-owners
 # These owners will be the default owners for everything in the github ci workflows
-.github/workflows/* @triton-devops
+.github/workflows/* @nvda-mesharma
