--- a/.github/workflows/trigger_ci.yml
+++ b/.github/workflows/trigger_ci.yml
@@ -9,3 +9,12 @@ jobs:
         run: |
           #!/bin/bash
           curl --request POST --header "PRIVATE-TOKEN:${{ secrets.TOKEN }}" "${{ secrets.MIRROR_URL }}"
+  trigger-ci:
+    environment: GITLAB
+    needs: mirror_repo
+    runs-on: self-hosted
+    steps:
+      - name: Trigger Pipeline
+        run: |
+          #!/bin/bash
+          curl --fail --request POST --form token=${{ secrets.PIPELINE_TOKEN }} -F ref=${GITHUB_HEAD_REF} -F variables[RULE_WORKFLOW]="DS_TEST_DEVELOPER_TOOLS" "${{ secrets.PIPELINE_URL }}"
