--- a/.github/workflows/trigger_ci_pull.yml
+++ b/.github/workflows/trigger_ci_pull.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: Sync Mirror Repository
-        run: ./.github/workflows/mirror_repo.sh ${{ secrets.TOKEN }} ${{ secrets.MIRROR_URL }}
+        run: chmod +x ./.github/workflows/mirror_repo.sh && ./.github/workflows/mirror_repo.sh ${{ secrets.TOKEN }} ${{ secrets.MIRROR_URL }}
 
   trigger-ci:
     environment: GITLAB
