--- a/.github/workflows/trigger-buildkite-pipeline.yml
+++ b/.github/workflows/trigger-buildkite-pipeline.yml
@@ -3,6 +3,7 @@ on: [push]
 steps:
    - name: Trigger a Buildkite Build on Push using v2.0.0
      uses: buildkite/trigger-pipeline-action@v2.0.0
+     environment: BUILDKITE
      with:
         buildkite_api_access_token:  ${{ secrets.TRIGGER_BK_BUILD_TOKEN }} 
         pipeline: "triton-1/hello"      
